test/trivial/deitz/test_assign_const.chpl
const x = 1; x = 3;
x = 2;
writeln(x);
